--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Venturi</title>
+    <title>Retreat</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -95,11 +95,12 @@
                     <h2 class="section-heading"> Not all who wander are lost.</h2>
                     <p> Find your next best friend! Sign up for our beta. </p>
                     <div class="badges">
-                       <form action="https://formspree.io/foolsyries@gmail.com"
-      method="POST">
-    <input type="email" name="_replyto" placeholder="email" style="color:#000111">
-    <input type="name" name="_replyto" placeholder="name" style="color:#000111">
-    <input type="submit" value="Sign Up" style="color:#000111; background-color:#55b4c6">
+<form id="emailForm">
+  <!--Note: don't change type/id values for inputs below-->
+    <input type="text" id ="fName" placeholder="First Name" style="color:#000111">
+    <input type="text" id ="lName" placeholder="Last Name" style="color:#000111">
+    <input type="text" id="email" placeholder="email" style="color:#000111">
+    <button id="submitBtn" style="color:#000111; background-color:#55b4c6">Submit</button>
 </form>
                     </div>
                 </div>
@@ -195,7 +196,10 @@
 
     <!-- Theme JavaScript -->
     <script src="js/new-age.min.js"></script>
-        
+
+    <!-- Email Form JavaScript -->
+    <script src="js/submit-email.js"></script>
+
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
