--- a/public/prelaunch.html
+++ b/public/prelaunch.html
@@ -31,8 +31,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#">FEATURES</a></li>
-            <li><a href="#">MORE INFO</a></li>
+            <!-- <li><a href="#">FEATURES</a></li>
+            <li><a href="#">MORE INFO</a></li> -->
 
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -44,28 +44,31 @@
     <div class="container">
       <div id="headerContent">
         <div class="row">
-          <div class="col-sm-8" id="headerOutside">
-            <div class="col-lg-12" id="headerInside">
-              <div id="headerCompanyName">
-                <h1>R &nbsp E &nbsp T &nbsp R &nbsp E &nbsp A &nbsp T</h1>
-              </div> <!-- headerCompanyName -->
-              <div id="headerSubtext">
-                <h3>
-                  We help you live
-                  <a href="" class="typewrite" data-period="2000" data-type='[ "comfortably", "boldly", "luxuriously", "effectively" ]'>
-                    <span class="wrap"></span>
-                  </a>
-                </h3>
-              </div> <!-- headerSubtext -->
-            </div> <!-- headerInside -->
-          </div> <!-- headerOutside -->
+          <div class="col-sm-12">
+            <div id="headerCompanyName">
+              <h1>RETREAT</h1>
+            </div> <!-- headerCompanyName -->
+            <div class="clearfix visible-xs-block"></div>
+          </div>
         </div> <!-- row -->
+        <div class="row">
+          <div class="col-md-6 col-sm-8 col-xs-12">
+            <div id="headerSubtext">
+              <h3>
+                We help you live
+                <a href="" class="typewrite" data-period="2000" data-type='[ "comfortably", "boldly", "luxuriously", "effectively" ]'>
+                  <span class="wrap"></span>
+                </a>
+              </h3>
+            </div> <!-- headerSubtext -->
+          </div> <!-- col-md -->
+        </div>
         <div id="Buttons">
           <div class="row">
             <div class="col-lg-12">
               <button type="button" name="getStarted" class="btn btn-default btn-lg round-transparent-button">LET'S GET STARTED!</button>
             </div>
-            <div class="col-lg-12">
+            <div class="col-lg-12" id="arrow">
               <img src="img/Asset 2.png" alt="">
             </div>
           </div>
