--- a/public/prelaunch.html
+++ b/public/prelaunch.html
@@ -56,7 +56,7 @@
             <div id="headerSubtext">
               <h3>
                 We help you live
-                <a href="" class="typewrite" data-period="2000" data-type='[ "comfortably", "boldly", "luxuriously", "effectively" ]'>
+                <a href="" class="typewrite" data-period="2000" data-type='[ "comfortably.", "boldly.", "luxuriously.", "effectively." ]'>
                   <span class="wrap"></span>
                 </a>
               </h3>
