--- a/public/prelaunch.html
+++ b/public/prelaunch.html
@@ -117,10 +117,16 @@
     <div class="endBar">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-2">
+            <a href="#"><img src="img/Logo.png" align="left" class="logo"></a>
+          </div>
+          <div class="col-lg-8">
             <a href="#"><img src="img/insta.png" class="socialLink"></a>
             <a href="#"><img src="img/twitter.png" class="socialLink"></a>
             <a href="#"><img src="img/facebook.png" class="socialLink"></a>
+          </div>
+          <div class="col-lg-2" align="right" valign="center" id=copyrightText>
+            © Retreat 2017
           </div>
         </div>
       </div>
