--- a/public/prelaunch.html
+++ b/public/prelaunch.html
@@ -40,7 +40,12 @@
                 </h3>
               </div> <!-- headerSubtext -->
             </div> <!-- col-md -->
-          </div>
+          </div> <!-- row -->
+          <div class="row">
+            <div class="col-lg-6 col-sm-8 col-xs-12">
+              <h3 id="headerHelper">Upgrade your excursions by using our platform to split and share the costs of your dream vacation!</h3>
+            </div>
+          </div> <!-- row -->
           <div id="Buttons">
             <div class="row">
               <div class="col-lg-12">
@@ -93,7 +98,7 @@
             <h3 class="signUpSubtext">No spam and sweet perks - no spam. Promise.</h3>
           </div>
           <div class="col-lg-12">
-            <img src="img/goldinf.png" style="padding: 3%">
+            <img src="img/goldinf.png" style="padding: 1%">
           </div>
           <div class="col-lg-12">
             <!-- Replace with real ID's -->
@@ -117,15 +122,15 @@
     <div class="endBar">
       <div class="container">
         <div class="row">
-          <div class="col-lg-2">
+          <div class="col-sm-3">
             <a href="#"><img src="img/Logo.png" align="left" class="logo"></a>
           </div>
-          <div class="col-lg-8">
+          <div class="col-sm-6">
             <a href="#"><img src="img/insta.png" class="socialLink"></a>
             <a href="#"><img src="img/twitter.png" class="socialLink"></a>
             <a href="#"><img src="img/facebook.png" class="socialLink"></a>
           </div>
-          <div class="col-lg-2" align="right" valign="center" id=copyrightText>
+          <div class="col-sm-3" align="right" valign="center" id=copyrightText>
             © Retreat 2017
           </div>
         </div>
