--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
     <!-- Icon (try new ones)-->
     <link rel="icon" href="img/travelIcon4.png">
 
-    <script type="text/javascript" src="js/typewriterAnimation.js">
-    </script>
+    <script   src="https://code.jquery.com/jquery-3.2.1.js"   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="   crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/typewriterAnimation.js"></script>
+    <script type="text/javascript" src="js/submit-email.js"></script>
   </head>
   <body>
 
@@ -49,7 +50,9 @@
           <div id="Buttons">
             <div class="row">
               <div class="col-lg-12">
-                <input type="button" class="round-transparent-button" value="LET'S GET STARTED!" onClick="document.getElementById('middle').scrollIntoView();" />
+                <a href="#middle">
+                  <input type="button" class="round-transparent-button" value="LET'S GET STARTED!"/>
+                </a>
               </div>
               <div class="col-lg-12" id="arrow">
                 <a href="#middle"><img src="img/LittleArrow.png"></a>
@@ -111,7 +114,7 @@
                 <label for="exampleInputEmail">E-mail</label>
                 <input type="email" class="form-control" id="exampleInputEmail" placeholder="jane.doe@example.com">
               </div>
-              <button type="submit" class="btn btn-default signUpButton">Sign Up</button>
+              <button id="submitBtn" type="submit" class="btn btn-default signUpButton">Sign Up</button>
             </form>
           </div>
         </div> <!-- row -->
@@ -137,7 +140,6 @@
       </div>
     </div>
 
-    <script   src="https://code.jquery.com/jquery-3.2.1.js"   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   </body>
