--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
           </div>
           <div class="col-lg-12">
             <!-- Replace with real ID's -->
-            <form class="form-inline">
+            <form class="form-inline" id="submitForm">
               <div class="form-group">
                 <label for="exampleInputName">Name</label>
                 <input type="text" class="form-control" id="exampleInputName" placeholder="Jane Doe">
