--- a/public/index.html
+++ b/public/index.html
@@ -129,9 +129,9 @@
             <a href="#"><img src="img/Logo.png" align="left" class="logo"></a>
           </div>
           <div class="col-sm-6">
-            <a href="#"><img src="img/insta.png" class="socialLink"></a>
-            <a href="#"><img src="img/twitter.png" class="socialLink"></a>
-            <a href="#"><img src="img/facebook.png" class="socialLink"></a>
+            <a href="#"><img src="./img/insta.png" class="socialLink"></a>
+            <a href="#"><img src="./img/twitter.png" class="socialLink"></a>
+            <a href="#"><img src="./img/facebook.png" class="socialLink"></a>
           </div>
           <div class="col-sm-3" align="right" valign="center" id=copyrightText>
             © Retreat 2017
