too much debugging

--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
           <div class="col-sm-6">
             <a href="#"><img src="./img/insta.png" class="socialLink"></a>
             <a href="#"><img src="./img/twitter.png" class="socialLink"></a>
-            <a href="#"><img src="./img/facebook.png" class="socialLink"></a>
+            <a href="#"><img src="./img/Facebook.png" class="socialLink"></a>
           </div>
           <div class="col-sm-3" align="right" valign="center" id=copyrightText>
             © Retreat 2017
