--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
           <div class="col-md-4 col-md-12">
             <i class="fa fa-building tagImage" aria-hidden="true" style="font-size: 60px"></i>
             <h3 class="tagHeading">Live Large</h3>
-            <p class="tagDescription">Stay at high end locations, and save hundred doing it!</p>
+            <p class="tagDescription">Stay at high end locations, and save hundreds doing it!</p>
           </div>
         </div> <!-- row -->
       </div> <!-- Container -->
