--- a/public/index.html
+++ b/public/index.html
@@ -105,14 +105,14 @@
           </div>
           <div class="col-lg-12">
             <!-- Replace with real ID's -->
-            <form class="form-inline" id="submitForm">
+            <form class="form-inline" id="submitForm" action=“/submitemail” method=“POST”>
               <div class="form-group">
                 <label for="exampleInputName">Name</label>
-                <input type="text" class="form-control" id="exampleInputName" placeholder="Jane Doe">
+                <input name="fName" type="text" class="form-control" id="exampleInputName" placeholder="Jane Doe">
               </div>
               <div class="form-group">
                 <label for="exampleInputEmail">E-mail</label>
-                <input type="email" class="form-control" id="exampleInputEmail" placeholder="jane.doe@example.com">
+                <input name="email" type="email" class="form-control" id="exampleInputEmail" placeholder="jane.doe@example.com">
               </div>
               <button id="submitBtn" type="submit" class="btn btn-default signUpButton">Sign Up</button>
             </form>
