--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,11 @@
 
 <body>
     <!-- HEADER -->
-    <section class="header">
+    <section class="header"> <img style="padding-left: 3%" src="img/Asset%204.png">
         <div class="container">
             <div id="headerContent">
                 <div class="row">
-                    <div style=padding-right:500px;> <img src="img/Asset%204.png"> </div>
-                    <div class="col-sm-12">
+                    <div class="col-md-12">
                         <h1 id="headerCompanyName">RETREAT</h1>
                         <div class="clearfix visible-xs-block"></div>
                     </div>
@@ -42,8 +41,8 @@
                     <div class="col-md-6 col-sm-8 col-xs-12">
                         <div>
                             <h3 id="headerSubtext" style="padding-bottom:25%;padding-top:7%; padding-right:5%">
-                  We help you live
-                  <a href="" class="typewrite" data-period="2000" data-type='[ "comfortably.", "boldly.", "luxuriously.", "effectively." ]'>
+                  We help you book
+                  <a href="" class="typewrite" data-period="2000" data-type='[ "comfortably.", "boldly.", "luxuriously.", "smart." ]'>
                     <span class="wrap"></span>
                   </a>
                 </h3> </div>
@@ -95,6 +94,9 @@
             <div class="col-md-4 col-md-12"> <i class="fa fa-building tagImage" aria-hidden="true" style="font-size: 60px"></i>
                 <h3 class="tagHeading">Live Large</h3>
                 <p class="tagDescription">Stay at high end locations, and save hundreds doing it!</p>
+            </div>
+            <div class="col-lg-12" id="arrow">
+                <a href="#signUpHeader"><img src="img/Asset%2014.png"></a>
             </div>
         </div>
         <!-- row -->
