--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,33 @@
 </head>
 
 <body>
+  <!-- NAV BAR STUFF -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#top"><img style="padding-left: 3%" src="img/Asset%204.png"></a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="#middle">ABOUT</a></li>
+            <li><a href="#signUpHeader">SIGN UP</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
     <!-- HEADER -->
-    <section class="header"> <img style="padding-left: 3%" src="img/Asset%204.png">
+    <section class="header" id="top">
+      <!-- <img style="padding-left: 3%" src="img/Asset%204.png"> -->
         <div class="container">
             <div id="headerContent">
                 <div class="row">
@@ -59,7 +84,7 @@
                             <a href="#middle">
                                 <input type="button" class="round-transparent-button" value="LET'S GET STARTED!" /> </a>
                         </div>
-                        <div class="col-lg-12" id="arrow">
+                        <div class="col-lg-12 arrow">
                             <a href="#middle"><img src="img/LittleArrow.png"></a>
                         </div>
                     </div>
@@ -95,7 +120,7 @@
                 <h3 class="tagHeading">Live Large</h3>
                 <p class="tagDescription">Stay at high end locations, and save hundreds doing it!</p>
             </div>
-            <div class="col-lg-12" id="arrow">
+            <div class="col-md-12 arrow">
                 <a href="#signUpHeader"><img src="img/Asset%2014.png"></a>
             </div>
         </div>
@@ -134,7 +159,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <a href="#"><img src="img/Asset%204.png" align="left" class="logo"></a>
+                    <a href="#top"><img class="LogoImg" src="img/Asset%204.png" align="left" class="logo"></a>
                 </div>
                 <div class="col-sm-6">
                     <a href="#"><img src="./img/insta.png" class="socialLink"></a>
