--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#top"><img style="padding-left: 3%" src="img/Asset%204.png"></a>
+          <a class="navbar-brand logo" href="#top"><img style="padding-left: 3%" src="img/Asset%204.png"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -158,10 +158,10 @@
     <div class="endBar">
         <div class="container">
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-xs-4">
                     <a href="#top"><img class="LogoImg" src="img/Asset%204.png" align="left" class="logo"></a>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 col-xs-5">
                     <a href="#"><img src="./img/insta.png" class="socialLink"></a>
                     <a href="#"><img src="./img/twitter.png" class="socialLink"></a>
                     <a href="#"><img src="./img/Facebook.png" class="socialLink"></a>
